fix alignment titles and project card

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,7 @@
 
   
   /* Font-Size Variables */
-  --section-title-font-size: 2.5vw;
+  --section-title-font-size: 2.3vw;
   
   /* Old Values */
   --main-border-radius: 0.0vw;
